# crashkit

./: .gitignore  BUILDING_CRASHPAD.md  README.md  RELEASING.md  build.gradle  gradle.properties  release.sh  settings.gradle  version.properties
app/: build.gradle
app/src/main/java/com/duckduckgo/crashkit/sample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
crashkit/: build.gradle.kts
crashkit/src/main/cpp/: CMakeLists.txt  native-bridge.cpp  process.cpp  process.h
crashkit/src/main/cpp/crashpad/: CRASHPAD_VERSION
crashkit/src/main/cpp/crashpad/include/handler/linux/: crash_report_exception_handler.h
crashkit/src/main/cpp/crashpad/include/handler/mac/: crash_report_exception_handler.h
crashkit/src/main/cpp/crashpad/include/handler/win/: crash_report_exception_handler.h
crashkit/src/main/cpp/crashpad/include/minidump/: minidump_crashpad_info_writer.h  minidump_file_writer.h  minidump_module_crashpad_info_writer.h
crashkit/src/main/java/com/duckduckgo/android_crashkit/: Crashpad.kt
crashkit/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
patches/crashpad/: 0001-annotation-allowlist-for-upload-filter-and-minidump-write.patch
scripts/: README.md  bootstrap_crashpad.zsh  copy_crashpad_static_libs.sh  crashpad_all.zsh  crashpad_build.zsh  crashpad_gn.zsh  run_minidump_tests.zsh  update_crashpad.zsh
server/: crashpad_server.py
